tests/invalid/builtin_proc.err_exp
builtin_proc.m:013: In clause for predicate `foo'/2:
builtin_proc.m:013:   error: undefined predicate `builtin.no_such_pred'/2.
